Migrate DependencyChecker